--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ NODE_ENV=development
 REACT_APP_ENVIRONMENT=development
 REACT_APP_API_URL=http://localhost:3000
 PORT=3001
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
